--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,8 @@ passenv =
 deps =
     lint: flake8-import-order
     lint,lint_docstrings: flake8
-    lint_docs: -rdev-requirements.txt
-    lint_docs,quick,unit: -rrequirements.txt
+    lint_docs: -rpinned-dev-requirements.txt
+    lint_docs,quick,unit: -rpinned-requirements.txt
     lint_docstrings: flake8_docstrings
     unit: pytest 
     # unit: pytest-timeout
