--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ configparser
 cwltool>=1.0.20191225192155
 docutils
 ephemeris>=0.10.3
-galaxy-containers
-galaxy-tool-util>=21.1.0.dev4
-galaxy-util>=20.5.0
+galaxy-containers<22.01
+galaxy-tool-util<22.01,>=21.1.0.dev4
+galaxy-util<22.01,>=20.5.0
 glob2
 gxformat2>=0.12.0
 jinja2
