Reduce CI test duplication

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ deps =
 
 setenv =
     gx: PYTEST_MARK="tests_galaxy_branch"
+    nogx: PYTEST_MARK="not tests_galaxy_branch"
     diagnostic: PLANEMO_TEST_VERBOSE=1
     diagnostic: PYTEST_CAPTURE="--capture=no"
     failfast: PYTEST_FAIL_FAIL="-x"
