Add type annotations to training material tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,4 +18,5 @@ max-complexity = 14
 exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,project_templates/cwl_draft3_spec/
 
 [mypy]
+exclude = tests/data/
 ignore_missing_imports = True
