--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ commands =
     lint_docs: make lint-docs
     lint_docstrings: flake8 --ignore='D107,D401,D105' {[tox]source_dir}
     unit: pytest {env:PYTEST_FAIL_FAIL:} {env:PYTEST_CAPTURE:} -m {env:PYTEST_MARK:""} {env:PYTEST_TARGET:{[tox]test_dir}} {posargs}
-    mypy: mypy --install-types --non-interactive {[tox]source_dir} {posargs}
+    mypy: mypy --install-types --non-interactive {[tox]source_dir} tests/ {posargs}
     gxwf_test_test: make setup-venv gxwf-test-test
 
 passenv = 
