Add type annotations and fixes

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{37}-lint, py37-unit-quick, py37-lint_docstrings, py37-lint_docs, py{37}-unit, py37-gxwf_test_test
+envlist = py{37}-lint, py37-mypy, py37-unit-quick, py37-lint_docstrings, py37-lint_docs, py{37}-unit, py37-gxwf_test_test
 source_dir = planemo
 test_dir = tests
 
