Test aginst dev packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ bioblend>=1.0.0
 click!=8.0.2
 cwltool>=1.0.20191225192155
 ephemeris>=0.10.3
-galaxy-containers<23.0
-galaxy-tool-util>=21.1.1,<23.0
-galaxy-util>=20.5.0,<23.0
+galaxy-tool-util>=22.5.0.dev0,<23.0
+galaxy-util>=22.5.0.dev0,<23.0
 glob2
 gxformat2>=0.14.0
 h5py
