Officially support Python 3.10 and 3.11
Also:
- Run some tests on 3.11 as well
- Don't pass deprecated arguments to `setup()` .
- Fix flake8 errors on Python 3.10

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,13 @@ jobs:
           - unit-nonredundant-noclientbuild-noshed-gx-dev
           - unit-nonredundant-noclientbuild-noshed-nogx
           - unit-diagnostic-serveclientcmd
+        include:
+          - python-version: '3.11'
+            tox-action: lint
+          - python-version: '3.11'
+            tox-action: mypy
+          - python-version: '3.11'
+            tox-action: unit-quick
     services:
       postgres:
         image: postgres:10.8
