--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,6 +83,9 @@ jobs:
         with:
           fetch-depth: 1
           submodules: true
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.12.1'
       - uses: actions/setup-python@v4
         with:
           python-version: '3.7'
