Fix parsing of training ``metadata.yaml`` files
Fix https://github.com/galaxyproject/planemo/issues/1415 .

--- a/tests/data/training_metadata.yaml
+++ b/tests/data/training_metadata.yaml
@@ -9,6 +9,6 @@ requirements:
   topic_name: introduction
   tutorials:
     - peaks2genes
-maintainers:
+editorial_board:
 - maintainer1
 - maintainer2
