Use tox-managed virtualenv in make lint-docs

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ setenv =
     2109: PLANEMO_TEST_GALAXY_BRANCH=release_21.09
     2101: PLANEMO_TEST_GALAXY_BRANCH=release_21.01
     2205: PLANEMO_TEST_GALAXY_BRANCH=release_22.05
+    lint_docs: VENV={env:VIRTUAL_ENV}
 skip_install =
     doc_test,lint,lint_docs,lint_docstrings,mypy,gxwf_test_test: True
 allowlist_externals =
