--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,7 @@ jobs:
             tox-action: unit-quick
     services:
       postgres:
-        image: postgres:10.8
+        image: postgres:16
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -63,6 +63,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Test psql
         run: |
+          psql --version  # Needs to be compatible with the postgres container image
           psql --tuples-only --username postgres -P pager=off --list
       - name: Install dependencies
         run: |
