--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[tool.mypy]
+exclude = 'tests/data/'
+ignore_missing_imports = true
+
 [tool.black]
 extend-exclude = '^/(docs/standards)/'
 include = '\.pyi?$'
