Fix make quick-test.
Missing test decorators and tell pytest about a function that isn't a test.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = --verbosity=1
+addopts = --verbosity=1 --ignore planemo/commands/cmd_test.py
 markers =
     tests_galaxy_branch: test against a specific Galaxy branch
