--- a/setup.cfg
+++ b/setup.cfg
@@ -15,4 +15,4 @@ logging-level=INFO
 # W503 is line breaks before binary operators, which has been reversed in PEP 8.
 ignore = E203,E501,W503
 max-complexity = 14
-exclude=.eggs,.git,.tox,.venv,.venv3,build,docs/conf.py,docs/standards,project_templates/cwl_draft3_spec/
+exclude=.eggs,.git,.tox,.venv,build,docs/conf.py,docs/standards,project_templates/cwl_draft3_spec/
