This will fix it right?

--- a/tox.ini
+++ b/tox.ini
@@ -65,7 +65,7 @@ setenv =
     2205: PLANEMO_TEST_GALAXY_BRANCH=release_22.05
     lint_docs: VENV=SKIP
 skip_install =
-    doc_test,lint,lint_docs,lint_docstrings,mypy,gxwf_test_test: True
+    doc_test,lint,lint_docstrings,mypy,gxwf_test_test: True
 allowlist_externals =
     lint_docs: make
     gxwf_test_test: make
