--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "planemo"
-version = "0.75.28.dev0"
+dynamic = ["version"]
 description = "Command-line utilities to assist in building tools for the Galaxy project (http://galaxyproject.org/)."
 readme = {file = ["README.rst", "HISTORY.rst"], content-type = "text/x-rst"}
 license = { text = "MIT" }
@@ -62,6 +62,9 @@ packages = [
     "reports/*",
     "scripts/*"
 ]
+
+[tool.setuptools.dynamic]
+version = {attr = "planemo.__version__"}
 
 [project.scripts]
 planemo = "planemo.cli:planemo"
