Overhaul Galaxy job config handling.
- More options from the command-line - multiple runners, TPV shared database, singularity, etc...
- Switch from job conf via XML to job conf via YAML.
- Bring in dependency on galaxy-job-config-init to handle a lot of that logic.
- Commands to assign binding a job config to a created Planemo profile.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bioblend>=1.0.0
 click!=8.0.2
 cwltool>=1.0.20191225192155
 ephemeris>=0.10.3
+galaxy-job-config-init>=0.1.1
 galaxy-tool-util[edam,extended-assertions]>=24.1,<25.0
 galaxy-util[template]>=24.1,<25.0
 glob2
