Adjust flake8 to black

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 # E203 is whitespace before ':'; we follow black's formatting here. See https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
 # E501 is line length, managed by black
 # W503 is line breaks before binary operators, which has been reversed in PEP 8.
-ignore = E203,E501,W503
+# E701,E704 are multiple statements on one line; we follow black's formatting here. See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#configuration
+ignore = E203,E501,W503,E701,E704
 max-complexity = 14
 exclude=.eggs,.git,.tox,.venv,build,docs/conf.py,docs/standards,project_templates/cwl_draft3_spec/
