--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ commands =
     lint: flake8
     lint: black --check --diff .
     lint: isort --check --diff .
+    lint: ruff check
     lint_docs: make lint-docs
     lint_docstrings: flake8 --ignore='D107,D401,D105' {[tox]source_dir}
     unit: pytest {env:PYTEST_FAIL_FAIL:} {env:PYTEST_CAPTURE:} -m {env:PYTEST_MARK:""} {env:PYTEST_TARGET:{[tox]test_dir}} {posargs}
@@ -25,6 +26,7 @@ deps =
     lint,lint_docstrings: flake8
     lint: black
     lint: isort
+    lint: ruff
     lint_docs: -rdev-requirements.txt
     lint_docs,quick,unit: -rrequirements.txt
     lint_docstrings: flake8_docstrings
