--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
         with:
-          fetch-depth: 1
+          persist-credentials: false
           submodules: true
       - uses: actions/setup-python@v6
         with:
@@ -69,7 +69,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           python -m pip install tox coveralls
-      - name: Checkout system space
+      - name: Check system space
         run: |
           df
       - name: Test with tox
@@ -82,7 +82,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
         with:
-          fetch-depth: 1
+          persist-credentials: false
           submodules: true
       - uses: actions/setup-node@v5
         with:
