--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,6 +61,7 @@ jobs:
       - uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
+          cache: pip
       - name: Test psql
         run: |
           psql --version  # Needs to be compatible with the postgres container image
@@ -90,6 +91,7 @@ jobs:
       - uses: actions/setup-python@v6
         with:
           python-version: '3.13'
+          cache: pip
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools
