--- a/tox.ini
+++ b/tox.ini
@@ -30,10 +30,11 @@ deps =
     lint_docs: -rdev-requirements.txt
     lint_docs,quick,unit: -rrequirements.txt
     lint_docstrings: flake8_docstrings
-    unit: pytest 
+    unit: pytest
     # unit: pytest-timeout
     unit: coverage
     unit: flask
+    unit: responses
     mypy: mypy
 
 setenv =
